--- a/convolutional_neural_network.ipynb
+++ b/convolutional_neural_network.ipynb
@@ -144,14 +144,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### The Test Set"
+        "### The Validation Set"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We do not want to perform transformations on the test data to avoid **data leakage**. We want to ensure that the evaluation of the model's performance reflects its ability to generalize to new, unseen data in a real-world scenario. We do however still need to normalize the data for our neural network."
+        "We do not want to perform transformations on the validation data to avoid **data leakage**. We want to ensure that the evaluation of the model's performance reflects its ability to generalize to new, unseen data in a real-world scenario. We do however still need to normalize the data for our neural network."
       ]
     },
     {
@@ -160,14 +160,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "test_datagen = ImageDataGenerator(rescale=1./255)"
+        "val_datagen = ImageDataGenerator(rescale=1./255)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Similary to the training, we create a generator for the test set. Only difference is the directory of the images."
+        "Similary to the training, we create a generator for the validation set. Only difference is the directory of the images."
       ]
     },
     {
@@ -184,8 +184,8 @@
         }
       ],
       "source": [
-        "test_set = test_datagen.flow_from_directory(\n",
-        "        'data/test',\n",
+        "val_set = val_datagen.flow_from_directory(\n",
+        "        'data/validation',\n",
         "        target_size=(150, 150),\n",
         "        batch_size=32,\n",
         "        class_mode='binary')"
@@ -209,7 +209,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The Convolutional Neural Network is a sequence of layers. Therefore we are going to intialize our layer with the `Sequential` class."
+        "The Convolutional Neural Network is a sequence of layers. Therefore we are going to intialize our model with the `Sequential` class."
       ]
     },
     {
@@ -282,7 +282,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Though, while not necessary, using a second convolutional layer in a Convolutional Neural Network allows the model to capture higher-level features by learning more complex patterns and representations from the input data."
+        "Using a second convolutional layer in a Convolutional Neural Network allows the model to capture higher-level features by learning more complex patterns and representations from the input data."
       ]
     },
     {
@@ -505,7 +505,7 @@
         }
       ],
       "source": [
-        "cnn.fit(x=training_set, validation_data=test_set, epochs=30)"
+        "cnn.fit(x=training_set, validation_data=val_set, epochs=30)"
       ]
     },
     {
