--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -348,7 +348,7 @@
       "metadata": {},
       "source": [
         "When reshaping the input data, we are essentially structuring it into a format that the network can efficiently process. Our input data should be a 3D array, *(Batch Size, Time Steps, Features)* where:\n",
-        "- Batch Size: The number of sequences in each batch.\n",
+        "- Batch Size is the number of sequences in each batch.\n",
         "- Time Steps represents the number of time steps in each sequence, which is 60 in our case.\n",
         "- Features represents the number of features at each time step. Since our data is univariate, this will be 1."
       ]
