--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -25,7 +25,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This is an implementations of a Recurrent Neural Network for weather prediction."
+        "This is an implementation of a Recurrent Neural Network for weather prediction."
       ]
     },
     {
@@ -70,6 +70,13 @@
       ],
       "source": [
         "tf.__version__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Preprocessing"
       ]
     },
     {
@@ -230,13 +237,6 @@
         "data = df.iloc[:, 2:3].values\n",
         "\n",
         "data"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Data Preprocessing"
       ]
     },
     {
