--- a/boltzmann_machine.ipynb
+++ b/boltzmann_machine.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Boltzmann machines are a type of stochastic or generative neural network that use probabilistic methods to learn and represent complex patterns in data. Boltzmann machine is an unsupervised deep learning model in which every node is connected to every other node and unlike the other neural networks, it is an undirected model. They also lack an output layer.\n",
+    "Boltzmann machines are a type of stochastic or generative neural network that use probabilistic methods to learn and represent complex patterns in data. Boltzmann machine is an unsupervised deep learning model in which every node is connected to every other node and unlike the other neural networks, it is an undirected model. They also lack an output layer. Boltzmann Machines can be seen from two different points of view: An Energy-Based Model and A Probabilistic Graphical Model.\n",
     "\n",
     "For our example, we will be making a movie recommendation system."
    ]
@@ -516,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to create a class for this probablility graphical model. Note that a Restricted Boltzmann Machine is a probablistic graphical model. "
+    "We are going to create a class for our Restricted Boltzmann Machine."
    ]
   },
   {
